fix(components/Schedule/styles): update speakers name color and the container padding on mobile

--- a/src/components/Schedule/styles.module.scss
+++ b/src/components/Schedule/styles.module.scss
@@ -22,7 +22,7 @@
 }
 
 .texts {
-  padding: 0 3.875rem 0 1.4375rem;
+  padding-left: 1.4375rem;
 }
 
 .time,
@@ -48,8 +48,8 @@
 }
 
 .speaker {
-  color: $theme-palette-scheduleTexts;
-  padding-bottom: 0.875;
+  color: $theme-palette-primary;
+  padding-bottom: 0.875rem;
 }
 
 .text {
@@ -84,6 +84,9 @@
       padding-left: 4.0625rem;
     }
   }
+  .texts {
+    padding-right: 3.875rem;
+  }
   .avatar {
     width: 10.5625rem;
   }
@@ -114,6 +117,9 @@
     &.-diamond {
       padding-left: 1.625rem;
     }
+  }
+  .texts {
+    padding-right: 1.25rem;
   }
   .avatar {
     width: 5.75rem;
